(enhancement) Support Java(FX) 11.
Also change default robot to glass (instead of awt) on macOS/Linux.