@@ -16,20 +16,49 @@
  */
 ext.pomDescription = 'TestFX Core'
 ext.moduleName = 'org.testfx'
+ext.openjfxVersion = '11'
 
 repositories {
     jcenter()
 }
 
+static def getOSName() {
+    final String osName = System.getProperty("os.name").toLowerCase()
+    if (osName.contains("linux")) {
+        return ("linux")
+    } else if (osName.contains("mac os x") || osName.contains("darwin") || osName.contains("osx")) {
+        return ("mac")
+    } else if (osName.contains("windows")) {
+        return ("win")
+    }
+    return ""
+}
+
+ext.platform = getOSName()
+
 dependencies {
+    if (JavaVersion.current().isJava10Compatible()) {
+        // In case we are on an Oracle JDK with JavaFX builtin, these will be ignored.
+        compile "org.openjfx:javafx-base:${openjfxVersion}:${platform}"
+        compile "org.openjfx:javafx-controls:${openjfxVersion}:${platform}"
+        compile "org.openjfx:javafx-graphics:${openjfxVersion}:${platform}"
+        compile "org.openjfx:javafx-swing:${openjfxVersion}:${platform}"
+        compile "org.openjfx:javafx-fxml:${openjfxVersion}:${platform}"
+    }
+
     compile "org.hamcrest:hamcrest-core:1.3"
-    compile "org.assertj:assertj-core:3.10.0"
+    compile "org.assertj:assertj-core:3.11.1"
     compileOnly 'org.osgi:org.osgi.core:6.0.0'
 
     testCompile "junit:junit:4.12"
-    testCompile "org.mockito:mockito-core:2.21.0"
+    testCompile "org.mockito:mockito-core:2.22.0"
     testCompile project(":testfx-junit")
-    if (JavaVersion.current().isJava9Compatible()) {
+    if (JavaVersion.current().isJava11Compatible()) {
+        testCompile "org.testfx:openjfx-monocle:jdk-11+26"
+    } else if (JavaVersion.current().isJava10Compatible() &&
+            System.getProperty("java.vm.name").toLowerCase().contains("openjdk")) {
+        testCompile "org.testfx:openjfx-monocle:jdk-11+26"
+    } else if (JavaVersion.current().isJava9Compatible()) {
         testCompile "org.testfx:openjfx-monocle:jdk-9+181"
     } else {
         testCompile "org.testfx:openjfx-monocle:8u76-b04"
@@ -52,6 +81,11 @@ compileJava {
         doFirst {
             options.compilerArgs = [
                     '--module-path', classpath.asPath,
+                    '--add-modules', 'javafx.base',
+                    '--add-modules', 'javafx.controls',
+                    '--add-modules', 'javafx.graphics',
+                    '--add-modules', 'javafx.swing',
+                    '--add-modules', 'javafx.fxml',
                     "--add-exports", "javafx.graphics/com.sun.glass.ui=$moduleName",
                     "--add-exports", "javafx.graphics/com.sun.javafx.application=$moduleName",
             ]
@@ -64,7 +98,6 @@ compileJava {
             options.addMultilineStringsOption('-add-exports').setValue([
                     'javafx.graphics/com.sun.javafx.application=org.testfx',
                     'javafx.graphics/com.sun.glass.ui=org.testfx'])
-
         }
     }
 }
